--- a/src/component/Main/About/style.scss
+++ b/src/component/Main/About/style.scss
@@ -149,6 +149,10 @@
 @media(max-width:480px){
     .about{
         &-content{
+            &-title{
+                text-align: center;
+                margin: 2rem 0;
+            }
             &-text{
                 font-size: 1.2rem;
             }
@@ -176,4 +180,18 @@
             }
         }
     }
+}
+@media(max-width:350px){
+    .about{
+        &-content{
+            &-startButton, &-goButton{
+                font-size: .8rem;
+            }
+            &-alert{
+                margin-right: .2rem;
+                font-size: 2rem;
+                align-self: flex-end;
+            }        
+    }
+}
 }
