--- a/src/component/Error404/style.scss
+++ b/src/component/Error404/style.scss
@@ -17,6 +17,7 @@
                     height: 40vh;
                 }
                 &-text{
+                    text-align: center;
                     font-size: 1.5rem;
                     font-weight: bold;
                     color: white;
