--- a/src/component/Features/Card/style.scss
+++ b/src/component/Features/Card/style.scss
@@ -89,3 +89,13 @@
             
     }
 }
+@media(max-width:350px){
+    .card{
+        &-tech{
+            text-align: center;
+        }
+        &-button{
+            margin: 0 1rem;
+        }
+    }
+}
