--- a/src/component/Main/Career/style.scss
+++ b/src/component/Main/Career/style.scss
@@ -1,6 +1,6 @@
 .career{
     min-height: 100vh;
-    margin: 4rem 0;
+    margin-top: 10rem;
         &-image{
             text-align: center;
         }
@@ -128,6 +128,19 @@
         }
     }
 }
+@media(max-width:480px){
+    .career{
+        &-line{
+            margin-right: .5rem;
+        }
+        &-item{
+            &-date{
+                margin-left: 1.5rem;
+                position: absolute;
+            }
+        }
+    }
+}
 @media(max-width:350px){
     .career{
         &-container{
@@ -139,10 +152,6 @@
         &-item{
             &-container{
                 margin-left: 0.5rem;
-            }
-            &-date{
-                position: absolute;
-                margin-left: 1.5rem;
             }
         }
     }
