--- a/src/component/Features/Card/style.scss
+++ b/src/component/Features/Card/style.scss
@@ -2,7 +2,20 @@
     width: 60%;
     margin: 10px;
     border-radius: 10px;
-    background-color:#D3D3D3;
+    background: linear-gradient(
+        30deg,
+        #888888,
+        #C0C0C0,
+        #A0A0A0,
+        #C0C0C0,
+        #B0B0B0,
+        #DCDCDC,
+        #B0B0B0,
+        #C0C0C0,
+        #A0A0A0,
+        #C0C0C0,
+        #888888
+    );
     box-shadow: black 0 0 1rem;
     padding: 10px 0;    
     display: flex;
