--- a/src/component/Footer/style.scss
+++ b/src/component/Footer/style.scss
@@ -6,10 +6,11 @@
         &-content{
             margin-right: 6rem;
             display: flex;
-            align-items: center;
+            align-items: center;           
         }
-        &-img{
-            width: 9vh;
+        &-icons{
+            display: flex;
+            align-items: center;
         }
         &-linked, &-Gmail{
             color: black;
@@ -17,7 +18,7 @@
             margin: 0 1rem;
         }
         &-Gmail{
-            font-size: 2.5rem;
+            font-size: 2.8rem;
         }
 }
 
@@ -31,19 +32,19 @@
         }
     }
 }
-@media(max-width:350px){
+@media(max-width:365px){
     .footer{
-        height: 20vh;
+        height: 17vh;
         align-items: center;
         &-content{
             display: inline;            
         }
         &-icons{
             display: flex;
-            justify-content: flex-end;            
+            justify-content: flex-end;        
         }
         &-Gmail{
-            margin-top: -.3rem;
+            margin-top: 0.2rem;
             font-size: 2.7rem;
         }
     }
