--- a/src/component/Main/About/style.scss
+++ b/src/component/Main/About/style.scss
@@ -1,4 +1,5 @@
 .about{
+    min-height: 100vh;
     margin-top: 10rem;
         &-image{
             text-align: center;
@@ -33,7 +34,7 @@
                     margin-top: 2rem;
                 }
                 &-picture{
-                    height: 40vh;
+                    min-height: 40vh;
                     display: flex;
                     align-items: center;
                     justify-content: flex-end;
@@ -193,7 +194,7 @@
         }
     }
 }
-@media(max-width:350px){
+@media(max-width:365px){
     .about{
         &-content{
             &-startButton, &-goButton{
