add useInView animation done

--- a/src/component/App/style.scss
+++ b/src/component/App/style.scss
@@ -17,7 +17,6 @@
             font-family: 'Acme', sans-serif;
         }
 }
-
 @keyframes shake {
     0%      {overflow: hidden; // to fix jump top screen issue during animation
             transform: 
@@ -41,4 +40,46 @@
             translateY(0)
             translateX(0)
         } 
+}
+.hidden{
+    opacity: 0;
+}
+.anim1 {
+    animation: 1s anim1;
+}
+.anim2{
+    animation: 1s ease anim2 ;
+}
+.anim3{
+    animation: .5s ease anim3;
+}
+@keyframes anim1 {
+    from {              
+        opacity: 0;
+    }
+    to {             
+        opacity: 1;
+    }
+}
+@keyframes anim2 {  
+    0%{
+        opacity: 0;
+    }
+    50% {
+        opacity: 0;
+        transform: rotateX(-100deg);      
+    }
+    100% {
+        opacity: 1;
+    }
+}
+@keyframes anim3 {
+    from {
+              transform: translateX(-200px);
+      opacity: 0;
+    }
+    to {
+              transform: translateX(0);
+      opacity: 1;
+    }
 }
