--- a/src/component/Main/Home/style.scss
+++ b/src/component/Main/Home/style.scss
@@ -2,6 +2,7 @@
     height: 100vh;
     display: flex;
     align-items: flex-end;
+    margin-bottom: 1rem;
         &-container{
             height: 65%;
             display: flex;
