--- a/src/component/Main/About/style.scss
+++ b/src/component/Main/About/style.scss
@@ -18,7 +18,6 @@
                     font-size: 1.5rem;
                     font-weight: bold;
                     margin: 2rem 0 1rem 3rem;
-
                 }
                 &-text, &-end{
                     font-size: 1.4rem;
@@ -30,8 +29,9 @@
                 }
                 &-end{
                     text-align: center;
+                    font-size: 1.5rem;
                     font-weight: bold;
-                    margin-top: 2rem;
+                    margin-top: 6rem;
                 }
                 &-picture{
                     min-height: 40vh;
