--- a/src/component/Main/Projects/style.scss
+++ b/src/component/Main/Projects/style.scss
@@ -29,4 +29,8 @@
             display: flex;
             justify-content: flex-end;
         }
+        &-card04{
+            display: flex;
+            justify-content: center;
+        }
 }
